2020-03-16  6.9.11-2 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-2, GIT revision 15...

2020-03-16  6.9.11-2 Cristy  <quetzlzacatenango@image...>
  * Fixed another sizing issue with the label coder when pointsize is set.

2020-03-15  6.9.11-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-1, GIT revision 15487:ffac3c4:20200315.

2020-03-07  6.9.11-1 Cristy  <quetzlzacatenango@image...>
  * Do not throw exception on empty draw path (reference
    https://github.com/ImageMagick/ImageMagick/issues/974).
  * Fix possible buffer overflow in ComplexImages().

2020-03-06  6.9.11-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.11-0, GIT revision 15465:f7c926d:20200306.

2020-03-01  6.9.11-0 Cristy  <quetzlzacatenango@image...>
  * Label text no longer gets cut-off (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37621).
  * Prevent heap overflow (reference
    https://github.com/ImageMagick/ImageMagick/issues/1857).

2020-02-29  6.9.10-97 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-97, GIT revision 15453:0537c847b:20200229

2020-02-24  6.9.10-97 Cristy  <quetzlzacatenango@image...>
  * Make sure we can grok this Fx expression: 1- -2.
  * Do not advance when substituting a NULL string.
  * Correct alpha for named colors in the Q32 non-HDRI build.
  * Write Group4 compressed image as a single strip.

2020-02-23  6.9.10-96 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-96, GIT revision 15438:2ef65d48e:20200223

2020-02-22  6.9.10-96 Cristy  <quetzlzacatenango@image...>
  * Adapt to a change in command-line options in the SVG inkscape delegate.

2020-02-21  6.9.10-95 Cristy  <quetzlzacatenango@image...>
  * No percent sign in lab() color.

2020-02-18  6.9.10-95 Cristy  <quetzlzacatenango@image...>
  * Adapt to a change in command-line options in the SVG inkscape delegate.
